# scix-client

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  mcp-server.md  python.md  query-syntax.md  rust.md
src/: client.rs  error.rs  export.rs  lib.rs  libraries.rs  links.rs  mcp.rs  metrics.rs  network.rs  objects.rs  parse.rs  python.rs  query.rs  rate_limit.rs  references.rs  search.rs  setup.rs  types.rs
