[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scix-client"
version = "0.3.0"
description = "Python client for the SciX (NASA ADS) API — powered by Rust"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["scix", "ads", "nasa", "astronomy", "bibliography", "astrophysics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.maturin]
features = ["python"]
bindings = "pyo3"
module-name = "scix_client"
manifest-path = "Cargo.toml"
